# XX-Mod-Manager-V2

./: .gitignore  .rooignore  .roomodes  AGENTS.md  README-zh.md  README.md  XX-Mod-Manager-Tauri.code-workspace  fix-state-updater.js  fix-type-imports.js  index.html  package-lock.json  package.json  refine.md  test-http.js  tsconfig.json  tsconfig.node.json  updateUpdater.ts  vite.before.ts  vite.config.ts
.github/: work flow tips.md
.roo/: system-prompt-architect  system-prompt-code  system-prompt-codev1  system-prompt-codev2
_deprecated/: XX-Mod-Manager-Tauri.code-workspace  fix-mixed-imports.js  index.html  package.json  tsconfig.json  tsconfig.node.json  updateUpdater.ts  vite.config.ts
crates/chunk-store/: Cargo.toml
crates/chunk-store/src/: archive.rs  chunk.rs  dds.rs  lib.rs  store.rs
docs/: ARCHITECTURE_MIGRATION_GUIDE.md  PROJECT_STANDARDS.md
locals/: en-US.json  zh-CN.json
note/: 现在的问题.md
scripts/: analyze-archive-stages.ts  analyze-bc-blocks.ts  analyze-bottleneck.ts  analyze-buf-ib.ts  analyze-character-hashes.ts  analyze-chunk-dedup.ts  analyze-compression-strategies.ts  analyze-dds-structure.ts  analyze-delta-potential.ts  analyze-io-tradeoff.ts  analyze-optimal-chunk-size.ts  analyze-optimal-granularity.ts  analyze-samples.ts  compare-compression.ts  extract-character-hashes.ts  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/resources/locals/: en-US.json  index.ts  zh-CN.json
src-tauri/resources/plugins/: testPlugin.js
src-tauri/src/: argv.rs  commands.rs  file_commands.rs  file_dialog.rs  lib.rs  main.rs  snack.rs  wake_up.rs
(+438 files in other folders)
